--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="ar" dir="rtl">
 <head>
-    <title>قناتي الخاصة</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>بث مسلسل النص - الحلقة 1</title>
     <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
+    <style>
+        body { background-color: #0f0f0f; color: white; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; display: flex; flex-direction: column; align-items: center; justify-content: center; min-height: 100vh; margin: 0; }
+        .container { width: 90%; max-width: 900px; text-align: center; background: #1e1e1e; padding: 20px; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.5); }
+        h1 { color: #ff0000; margin-bottom: 20px; }
+        .video-js { margin: 0 auto; border-radius: 10px; overflow: hidden; border: 2px solid #333; }
+    </style>
 </head>
-<body style="background: #000; display: flex; justify-content: center; align-items: center; height: 100vh;">
+<body>
 
-    <video id="my-video" class="video-js vjs-big-play-centered" controls preload="auto" width="800" height="450" data-setup='{}'>
-        <source src="https://metadata-archive-monitors-float.trycloudflare.com/m3u/xteve.m3u" type="application/x-mpegURL">
-    </video>
+    <div class="container">
+        <h1>📺 بث مباشر: مسلسل النص</h1>
+        <p>البث يعمل الآن من سيرفرك الخاص</p>
 
-    <script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script>
+        <video id="my-video" class="video-js vjs-big-play-centered vjs-16-9" controls autoplay preload="auto" data-setup='{}'>
+            <source src="https://run-sydney-prefers-brown.trycloudflare.com/m3u/xteve.m3u" type="application/x-mpegURL">
+            <p class="vjs-no-js">للمشاهدة، يرجى تفعيل JavaScript وتحديث المتصفح.</p>
+        </video>
+    </div>
+
+    <script src="https://vjs.zencdn.net/7.20.3/video.js"></script>
 </body>
 </html>
