--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>البث يعمل الآن من سيرفرك الخاص</p>
 
         <video id="my-video" class="video-js vjs-big-play-centered vjs-16-9" controls autoplay preload="auto" data-setup='{}'>
-            <source src="https://run-sydney-prefers-brown.trycloudflare.com/m3u/xteve.m3u" type="application/x-mpegURL">
+            <source src="https://run-sydney-prefers-brown.trycloudflare.com/stream/1" type="application/x-mpegURL">
             <p class="vjs-no-js">للمشاهدة، يرجى تفعيل JavaScript وتحديث المتصفح.</p>
         </video>
     </div>
@@ -27,3 +27,4 @@
     <script src="https://vjs.zencdn.net/7.20.3/video.js"></script>
 </body>
 </html>
+
