--- a/index.html
+++ b/index.html
@@ -2,29 +2,19 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>بث مسلسل النص - الحلقة 1</title>
+    <title>بث المسلسل - مباشر</title>
     <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
-    <style>
-        body { background-color: #0f0f0f; color: white; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; display: flex; flex-direction: column; align-items: center; justify-content: center; min-height: 100vh; margin: 0; }
-        .container { width: 90%; max-width: 900px; text-align: center; background: #1e1e1e; padding: 20px; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.5); }
-        h1 { color: #ff0000; margin-bottom: 20px; }
-        .video-js { margin: 0 auto; border-radius: 10px; overflow: hidden; border: 2px solid #333; }
-    </style>
 </head>
-<body>
+<body style="background:#000; color:white; text-align:center; padding-top:50px;">
 
-    <div class="container">
-        <h1>📺 بث مباشر: مسلسل النص</h1>
-        <p>البث يعمل الآن من سيرفرك الخاص</p>
+    <h1>📺 مسلسل النص - بث مباشر</h1>
 
-        <video id="my-video" class="video-js vjs-big-play-centered vjs-16-9" controls autoplay preload="auto" data-setup='{}'>
-            <source src="https://run-sydney-prefers-brown.trycloudflare.com/stream/1" type="application/x-mpegURL">
-            <p class="vjs-no-js">للمشاهدة، يرجى تفعيل JavaScript وتحديث المتصفح.</p>
+    <div style="display:flex; justify-content:center;">
+        <video id="player" class="video-js vjs-default-skin vjs-big-play-centered" controls autoplay width="800" height="450">
+            <source src="https://run-sydney-prefers-brown.trycloudflare.com/local/video1.mp4" type="video/mp4">
         </video>
     </div>
 
     <script src="https://vjs.zencdn.net/7.20.3/video.js"></script>
 </body>
 </html>
-
