--- a/index.html
+++ b/index.html
@@ -1,20 +1,4 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <title>بث المسلسل - مباشر</title>
-    <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
-</head>
-<body style="background:#000; color:white; text-align:center; padding-top:50px;">
-
-    <h1>📺 مسلسل النص - بث مباشر</h1>
-
-    <div style="display:flex; justify-content:center;">
-        <video id="player" class="video-js vjs-default-skin vjs-big-play-centered" controls autoplay width="800" height="450">
-            <source src="https://run-sydney-prefers-brown.trycloudflare.com/local/video1.mp4" type="video/mp4">
-        </video>
-    </div>
-
-    <script src="https://vjs.zencdn.net/7.20.3/video.js"></script>
-</body>
-</html>
+<script>
+    // هذا الرابط سيحول أي شخص يفتح صفحة جيت هاب إلى قائمة القنوات مباشرة
+    window.location.href = 'https://lending-lyric-fell-bruce.trycloudflare.com/web';
+</script>
