Replace script redirect with meta refresh tag

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<script>
-    // هذا الرابط سيحول أي شخص يفتح صفحة جيت هاب إلى قائمة القنوات مباشرة
-    window.location.href = 'https://lending-lyric-fell-bruce.trycloudflare.com/web';
-</script>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="refresh" content="0; url=https://girlfriend-controlling-aggregate-spare.trycloudflare.com/web">
+</head>
+<body>
+    <p>جاري التحويل إلى سيرفر IPTV الخاص بك...</p>
+</body>
+</html>
